--- a/libs/core/ng-entry-html/util/src/index.html
+++ b/libs/core/ng-entry-html/util/src/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <title>Loading...</title>
     <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <link rel="icon" href="assets/img/favicon.svg" type="image/svg+xml" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -12,8 +13,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   </head>
+
   <body class="mat-typography">
-    <plastik-root>
+    <plastik-root role="application">
       <div class="spinner-container">
         <img class="logo" width="100" src="assets/img/favicon.svg" alt="" />
         <div class="lds-ripple">
