feat(nasa-images): #258 clean up material and tailwind config
ISSUES CLOSED: #258

--- a/libs/core/ng-entry-html/util/src/index.html
+++ b/libs/core/ng-entry-html/util/src/index.html
@@ -10,11 +10,10 @@
     <link rel="icon" href="assets/img/favicon.svg" type="image/svg+xml" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   </head>
 
-  <body class="mat-typography">
+  <body class="mat-typography mat-app-background">
     <plastik-root role="application">
       <div class="spinner-container">
         <img class="logo" width="100" src="assets/img/favicon.svg" alt="" />
