--- a/libs/core/ng-entry-html/util/src/index.html
+++ b/libs/core/ng-entry-html/util/src/index.html
@@ -12,8 +12,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png" />
     <link rel="mask-icon" href="assets/img/safari-pinned-tab.svg" color="#5bbad5" />
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
-    <link rel="shortcut icon" type="image/ico" href="assets/img/favicon.ico" />
+    <link rel="preload" as="image" type="image/x-icon" href="assets/img/favicon.ico" />
+    <link rel="preload" as="image" type="image/ico" href="assets/img/favicon.ico" />
     <link rel="icon" href="assets/img/favicon.svg" type="image/svg+xml" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,11 +23,11 @@
   <body class="mat-typography mat-app-background">
     <plastik-root role="application">
       <div class="spinner-container">
-        <img class="logo" width="100" src="assets/img/favicon.svg" alt="" />
         <div class="lds-ripple">
           <div></div>
           <div></div>
         </div>
+        <p class="sr-only">Loading...</p>
       </div>
     </plastik-root>
   </body>
