perf(storage/entities): #623 add storage types and abstract storage service

--- a/libs/core/ng-entry-html/util/src/index.html
+++ b/libs/core/ng-entry-html/util/src/index.html
@@ -14,7 +14,11 @@
     <link rel="icon" href="assets/img/favicon.svg" type="image/svg+xml" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link
+      rel="preload"
+      as="style"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      onload="this.onload=null;this.rel='stylesheet'" />
   </head>
 
   <body class="mat-typography mat-app-background">
